@@ -1,3 +1,6 @@
+Jan 17, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
+- add g_gear flags of Urban Terror 3.2
+
 Jan 15, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
 - Update danish translation (Morten Brix Pedersen)
 - Update german translation
